version/0.7/_sources/examples/internal_scripting/emag.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\internal_scripting\emag.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_internal_scripting_emag.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_internal_scripting_emag.py:


.. _ref_internal_scripting_emag:

E-magnetic
==========
This example demonstrates internal scripting E-Mag functionality

.. GENERATED FROM PYTHON SOURCE LINES 30-34

.. code-block:: Python

    import ansys.motorcad.core as pymotorcad

    mc = pymotorcad.MotorCAD()








.. GENERATED FROM PYTHON SOURCE LINES 35-36

Disable pop-up messages

.. GENERATED FROM PYTHON SOURCE LINES 36-59

.. code-block:: Python

    mc.set_variable("MessageDisplayState", 2)


    # This function is called when "Run" is pressed
    def main():
        pass


    class emagnetic:
        def initial(self):
            mc.display_screen("Scripting")
            shaft_speed = mc.get_variable("ShaftSpeed")
            if shaft_speed > 1000:
                print("Shaft speed is too high. Resetting to 500")
                mc.set_variable("ShaftSpeed", 500)

        def final(self):
            loss_total = mc.get_variable("loss_total")
            # display total loss rounded to 2dp if available
            print("total loss is: " + str(round(loss_total, 2)))
            mc.display_screen("Calculation")









.. GENERATED FROM PYTHON SOURCE LINES 60-63

PyMotorCAD Documentation Example
--------------------------------------
(Used for the PyMotorCAD Documentation Examples only)

.. GENERATED FROM PYTHON SOURCE LINES 63-71

.. code-block:: Python

    try:
        from setup_scripts.setup_script import run_emag_demo
    except ImportError:
        pass
    else:
        run_emag_demo(mc)

    mc.set_variable("MessageDisplayState", 0)




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    4:48:06 PM : Warning: Licences for different machine types are checked out.
    You may wish to review your licence configuration.
    4:48:12 PM : Unable to open script file: C:\actions-runner-docs\_work\pymotorcad\pymotorcad\examples\emag.py
    4:48:21 PM : FEA Calculation Time: 5 Seconds
    4:48:21 PM : Warning: Operating point outside voltage limit. Check the DC bus voltage.
    4:48:21 PM : Solving completed
    Shaft speed:10000





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 26.079 seconds)


.. _sphx_glr_download_examples_internal_scripting_emag.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: emag.ipynb <emag.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: emag.py <emag.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: emag.zip <emag.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
